@@ -1,6 +1,9 @@
 OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.7 Engineering
+	Fixed slapd syncrepl bugs (ITS#2948,2995)
+	Fixed slapd bind method portability bug (ITS#3038)
+	Fixed libldap try_read1msg bug (ITS#2982)
 	Added slurpd replication interval config option (ITS#2768)
 	Build Environment
 		Fixed shared library soname issues (ITS#3035)
